--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+title: Chad Zirbel
+author: Chad Zirbel
+email: crzirbel@gmail.com
 description: A wonderful site
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: crzirbel
+github_username:  crzirbel
 
 # Build settings
 markdown: kramdown
