--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Chad Zirbel
 author: Chad Zirbel
 email: crzirbel@gmail.com
-description: A wonderful site
+description: 
 twitter_username: crzirbel
 github_username:  crzirbel
 
